# ffmpeg-frame-encoder

./: Cargo.toml
src/: encoder.rs  filters.rs  lib.rs  sink.rs
src/logger/: log_thread.rs  mod.rs
